; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/net/extr_psock_tpacket.c_get_next_frame.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/net/extr_psock_tpacket.c_get_next_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ring = type { i32, %struct.TYPE_4__, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.ring*, i32)* @get_next_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_next_frame(%struct.ring* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.ring*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.ring* %0, %struct.ring** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ring*, %struct.ring** %4, align 8
  %8 = getelementptr inbounds %struct.ring, %struct.ring* %7, i32 0, i32 2
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i64 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  store i8* %12, i8** %6, align 8
  %13 = load %struct.ring*, %struct.ring** %4, align 8
  %14 = getelementptr inbounds %struct.ring, %struct.ring* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  switch i32 %15, label %35 [
    i32 130, label %16
    i32 129, label %16
    i32 128, label %25
  ]

16:                                               ; preds = %2, %2
  %17 = load %struct.ring*, %struct.ring** %4, align 8
  %18 = getelementptr inbounds %struct.ring, %struct.ring* %17, i32 0, i32 2
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %20 = load i32, i32* %5, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i64 %21
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i8*, i8** %23, align 8
  store i8* %24, i8** %3, align 8
  br label %37

25:                                               ; preds = %2
  %26 = load i8*, i8** %6, align 8
  %27 = load i32, i32* %5, align 4
  %28 = load %struct.ring*, %struct.ring** %4, align 8
  %29 = getelementptr inbounds %struct.ring, %struct.ring* %28, i32 0, i32 1
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = mul nsw i32 %27, %31
  %33 = sext i32 %32 to i64
  %34 = getelementptr i8, i8* %26, i64 %33
  store i8* %34, i8** %3, align 8
  br label %37

35:                                               ; preds = %2
  %36 = call i32 @bug_on(i32 1)
  br label %37

37:                                               ; preds = %16, %25, %35
  %38 = load i8*, i8** %3, align 8
  ret i8* %38
}

declare dso_local i32 @bug_on(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
